# mmrbi

./: .travis.yml  Cargo.toml  Readme.md
.github/workflows/: rust.yml
examples/: macros.rs
examples/explicit-package-path/: Cargo.toml
examples/script/: Cargo.toml  build.rs
src/: _lib.rs  _log_impl.rs  cargo_about.rs  cargo_web.rs  command.rs  command_ext.rs  env.rs  fs.rs  lib.rs  log.rs  macros.rs  path.rs  path_ext.rs  result_ext.rs  rustc.rs  rustup.rs  version.rs  vscode.rs  wasm_bindgen.rs  wasm_pack.rs
src/cargo/: _cargo.rs
src/cargo/metadata/: _metadata.rs  diag.rs  package.rs  packages.rs  utils.rs  workspace.rs
src/cargo/script/: _script.rs  env.rs  out.rs
src/cargo/toml/: _toml.rs  cargo.rs  package.rs  target.rs  workspace.rs
src/fs/: _fs.rs  entries.rs  snapshot.rs  windows.rs
src/io/: _io.rs
