# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "examples/*"]
exclude = ["examples/asdf"]

[package]
name            = "mmrbi"
version         = "0.0.3"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
repository      = "https://github.com/MaulingMonkey/mmrbi.git"
documentation   = "https://docs.rs/mmrbi/"
edition         = "2018"
license         = "Apache-2.0 OR MIT"
readme          = "Readme.md"
description     = "MaulingMonkey's Rust Build Infrastructure"
keywords        = []
categories      = ["development-tools::build-utils"]

[badges]
travis-ci       = { repository = "MaulingMonkey/mmrbi", branch = "master" }

[dependencies]
lazy_static     = "1.4"
serde           = { version = "1", features = ["derive"] }
toml            = "0.5"
nonmax          = "0.5"
