# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "examples/*"]
exclude = ["examples/asdf"]

[package]
name            = "mmrbi"
version         = "0.0.15"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
repository      = "https://github.com/MaulingMonkey/mmrbi"
documentation   = "https://docs.rs/mmrbi/"
edition         = "2018"
license         = "Apache-2.0 OR MIT"
readme          = "Readme.md"
description     = "MaulingMonkey's Rust Build Infrastructure"
keywords        = []
categories      = ["development-tools::build-utils"]

[badges]
travis-ci       = { repository = "MaulingMonkey/mmrbi", branch = "master" }

[package.metadata.docs.rs]
# https://docs.rs/about/metadata
all-features    = true
default-target  = "x86_64-pc-windows-msvc"
rustdoc-args    = ["--cfg=doc_cfg"]

[features]
default         = []
all             = ["serde", "toml", "version"]
version         = ["semver"]

[dependencies]
serde           = { version = "1",      optional = true, features = ["derive"] }
toml            = { version = "0.5",    optional = true }
semver          = { version = "0.11",   optional = true }
alphanumeric-sort = "=1.4.0"
